--- a/application/package.json
+++ b/application/package.json
@@ -15,7 +15,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "typescript": "^4.2.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
@@ -46,6 +46,6 @@
   },
   "devDependencies": {
     "@types/uuid": "^8.3.0",
-    "node-sass": "^5.0.0"
+    "node-sass": "^7.0.0"
   }
 }
